--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/instagram.png"/>
 </head>
 <body>
     <div class="rango-wrapper">
@@ -35,7 +36,7 @@
                 </p>
             </div>
             <div class="baixar-app">
-                <p class="baixar">Baixe o aplicativo</p>
+                <p class="baixar link-blue">Baixe o aplicativo</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
